feat: fetch block data and store it in a db
