# docs/swagger.json
@@ -9,6 +9,43 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/dashboard/uniswap-log": {
+            "post": {
+                "description": "Update Uniswap USDC/ETH pair swap log",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dashboard"
+                ],
+                "summary": "Update Uniswap USDC/ETH pair swap log",
+                "parameters": [
+                    {
+                        "description": "Uniswap USDC/ETH pair request body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/UniswapUSDCETHPairBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/SuccessMessageResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
         "/user/tasks": {
             "post": {
                 "description": "Get user points history for distributed tasks",
@@ -49,7 +86,7 @@
                 }
             }
         },
-        "/user/{address}": {
+        "/user/tasks/{address}": {
             "get": {
                 "description": "Get user tasks status by address",
                 "consumes": [
@@ -89,6 +126,38 @@
         }
     },
     "definitions": {
+        "SuccessMessageResponse": {
+            "description": "Success message response for 200",
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "name": {
+                    "type": "string",
+                    "example": "SUCCESS"
+                }
+            }
+        },
+        "UniswapUSDCETHPairBody": {
+            "description": "Uniswap USDC/ETH pair request body",
+            "type": "object",
+            "required": [
+                "endBlockNumber",
+                "startBlockNumber"
+            ],
+            "properties": {
+                "endBlockNumber": {
+                    "type": "integer",
+                    "example": 20358617
+                },
+                "startBlockNumber": {
+                    "type": "integer",
+                    "example": 20300000
+                }
+            }
+        },
         "UserStatusResponse": {
             "description": "User status response",
             "type": "object",
@@ -138,6 +207,9 @@
         "UserTasksBody": {
             "description": "User tasks request body",
             "type": "object",
+            "required": [
+                "walletAddress"
+            ],
             "properties": {
                 "walletAddress": {
                     "type": "string",
